# BlueCode

./: .gitignore  BBBsetup.bash  CMakeLists.txt  Config.txt  Doxyfile  MonteCarlo.bash  README.md  RunThis.bash  d-html  d-latex
Dox/: dox-html  dox-latex
cmake/: FindIrrlicht.cmake
include/: Control.h  Controller.h  DoxLatex.h  DoxMainPage.h  Guidance.h  Navigation.h  Parser.h  PathPlanning.h  PlantModel.h  TimeModule.h  preprocdef.h
include/PlantModel/: PlantModel.h  Vehicle.h
include/sensors/: SensorHub.h  Sensors_generic.h
include/sensors/Camera/: Camera_generic.h
include/sensors/GPS/: GPS_generic.h
include/sensors/Laser/: Laser_generic.h
irrlicht/media/: Gui1.xml  car.mtl  field.mtl
output/: data_0.csv  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  data_7.csv  data_8.csv  data_9.csv  pts.csv
scripts/: BBBInitialize.bash  BBBclose  BBBcopyCode  BBBcopyInterfaceCode  BBBmakePlots  BBBmoveOutput  BBBpost  BBBwatchdog  PostProcess.m  disarm  multi_v_time.py  pos_v_time.py  vel_v_time.py
src/: Camera_generic.cpp  Control.cpp  Controller.cpp  GPS_generic.cpp  Guidance.cpp  Laser_generic.cpp  Navigation.cpp  Parser.cpp  PathPlanning.cpp  PlantModel.cpp  SensorHub.cpp  TimeModule.cpp  Vehicle.cpp  main.cpp  webcam.cpp
